Move IConfigNode naming information to new interface